table overlapping fixed

--- a/Frontend/src/search.css
+++ b/Frontend/src/search.css
@@ -1,5 +1,3 @@
 .searchBox {
-    padding-left: 2rem;
     width: 80%;
-    height: 15px;
 }
